# Sherk

./: CMakeLists.txt  README.md  README2.md  Sherk.c  TODO.md  git.push.sh  main.c  version.md
src/client/: CMakeLists.txt  README.md  build.sh  client.c  sherk.c
src/client/include/define/: const.h  exitcode.h  message.h  rescode.h
src/client/include/helper/: color.h  console.h  exit.h  string.h
src/client/include/object/: SQLResponseData.h  SocketResponseData.h  User.h
src/client/module/administrator/: administrator.c  administrator.h
src/client/module/certificate/: certificate.c  certificate.h
src/client/module/command/: command.c  command.h
src/client/module/encrypter/: encrypter.c  encrypter.h
src/client/module/express/: express.c  express.h
src/client/module/grocery/: grocery.c  grocery.h
src/client/module/login/: login.c  login.h
src/client/module/network/: network.c  network.h
src/client/module/test/: test.c  test.h
src/client/module/ui/: ui.c  ui.h
src/language_connectivity/: CMakeLists.txt  README.md  language_connectivity.c
src/language_connectivity/php/: php_connectivity.c
src/language_connector/: CMakeLists.txt  README.md  language_connector.c  language_connector.h
src/language_connector/php/: php_connector.h
src/server/: CMakeLists.txt  build.sh  deploy.sh  git.async.sh  sherkd.c  undeploy.sh  测试用例.md
src/server/SherkEngine/: README.md
src/server/SherkEngine/src/module/executor/: executor.c  executor.h
src/server/SherkLaunch/: README.md
src/server/SherkLaunch/src/: CMakeLists.tpl  sherkLaunch.c  sherkLaunch.h
src/server/SherkLaunch/src/module/adapter/: adapter.c  adapter.h  sherk.conf
src/server/SherkLink/: README.md
src/server/SherkLink/src/: CMakeLists.tpl  sherkLink.c  sherkLink.h
src/server/SherkLink/src/module/network/: network.c  network.h
src/server/SherkLink/src/module/process/: process.c  process.h
src/server/SherkLink/src/module/session/: session.c  session.h
src/server/SherkSQL/: README.md
src/server/SherkSQL/src/examples/: analyst_create_sql.c
src/server/SherkSQL/src/include/: keyword.h
src/server/SherkSQL/src/module/analyst/: analyst.c  analyst.h
src/server/SherkSQL/src/module/builder/: builder.c  builder.h
src/server/SherkSQL/src/module/extractor/: extractor.c  extractor.h
src/server/SherkSQL/src/module/interviewer/: interviewer.c  interviewer.h
src/server/SherkSQL/src/module/parser/: parser.c  parser.h  pattern.tpl
src/server/SherkSQL/src/module/query_cache/: query_cache.c  query_cache.h
src/server/SherkService/mechanism/include/define/: color.h  const.h  message.h  rescode.h
src/server/SherkService/mechanism/include/struct/: res_array.h
src/server/SherkService/mechanism/module/administrator/: administrator.c  administrator.h
src/server/SherkService/mechanism/module/excel_graph/: excel_graph.c  excel_graph.h
src/server/SherkService/mechanism/module/grocery/: grocery.c  grocery.h
src/server/SherkService/mechanism/module/privilege/: privilege.c  privilege.h
src/server/SherkService/mechanism/module/variable_master/: variable_master.c  variable_master.h
src/server/SherkService/mmu/: README.md
src/server/SherkService/system/include/const/: log_level.h
src/server/SherkService/system/module/disaster_preserve/: README.md
src/server/SherkService/system/module/fault_preserve/: README.md
src/server/SherkService/system/module/logclerk/: logclerk.c  logclerk.h
src/server/SherkService/test/module/automated_test/: automated_test.c  automated_test.h
src/server/SherkService/test/module/test_database/: test_database.c  test_database.h
src/server/SherkService/test/module/test_log/: test_log.c  test_log.h
src/server/SherkService/test/module/test_network/: test_network.c  test_network.h
src/server/SherkService/test/module/test_privileges/: test_privileges.c  test_privileges.h
src/server/SherkService/test/module/test_sql/: test_sql.c  test_sql.h
src/server/SherkService/test/module/test_table/: test_table.c  test_table.h
src/server/SherkService/test/module/test_users/: test_users.c  test_users.h
src/server/SherkService/test/module/test_variable/: test_variable.c  test_variable.h
src/server/SherkStorage/: README.md
src/server/SherkStorage/src/module/connector/: connector.c  connector.h
src/server/SherkStorage/src/module/mounter/: mounter.c  mounter.h
src/server/SherkSupport/: README.md  todo.txt
src/server/SherkSupport/src/include/serialize/: tobe_serialized_structs.h
src/server/SherkSupport/src/include/static/: generator.h
src/server/SherkSupport/src/module/skeleton/: skeleton.c  skeleton.h
src/server/SherkTest/: .gitignore
src/server/SherkTest/src/module/test_network/: test_network.c  test_network.h
src/server/SherkTest/src/module/test_table/: test_table.c  test_table.h
src/server/include/algorithm/tree/: b.h
src/server/include/builtinFunctions/: builtinFunctions.h
src/server/include/define/: const.h  errorcode.h  message.h  rescode.h
src/server/include/file/: file.h
src/server/include/function/: max.h
src/server/include/object/: SocketResponseData.h
src/server/integrity/assertion/: assertion.c
src/server/miscellaneous/storedProcedure/: storedProcedure.c
src/server/module/architecture/engine/index/: index.h
src/server/module/architecture/engine/integrity/: integrity.h
src/server/module/architecture/engine/view/: view.c  view.h
src/server/module/architecture/security/audit/: audit.h
src/server/module/architecture/storage/buffer/: buf_table.c  (+2 more)
src/server/module/init/: init.c  init.h
src/server/module/link/thread/: thread.h
src/server/modules/link/network/: network.c
src/server/modules/network/: network.c  network.h
src/server/package/: package.h
src/server/package/algorithm/: algorithm.h
src/server/package/charset/: charset.h
src/server/package/dictionary/: dictionary.h
src/server/package/file/: file.h  readcnf.h
src/server/package/function/: avg.h  function.h  last_insert_id.h  max.h  min.h
src/server/system/journal/: journal.c
src/server/system/sql/parameterizedQuery/: parameterizedQuery.c
(+100 files in other folders)
